--- a/package.json
+++ b/package.json
@@ -25,12 +25,10 @@
   },
   "homepage": "https://github.com/neutronkit/neutron#readme",
   "devDependencies": {
-    "coveralls": "^2.11.9",
     "electron-prebuilt": "^0.37.8",
     "grunt": "^1.0.1",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "istanbul": "^0.4.3"
+    "grunt-contrib-watch": "^1.0.0"
   },
   "dependencies": {
     "jquery": "^2.2.3"
