--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ install:
 
 matrix:
   fast_finish: true
+  
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 notifications:
   email:
