--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-register": "^6.5.2",
     "browser-sync": "^2.2.1",
     "del": "^1.1.1",
+    "electron-prebuilt": "^1.4.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.0.1",
     "gulp-babel": "^6.1.1",
@@ -39,6 +40,7 @@
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-prompt": "^0.2.0",
     "gulp-sass": "^2.0.0",
     "gulp-scss-lint": "^0.4.0",
     "gulp-size": "^1.2.1",
