--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,11 @@
 {
   "name": "neutronkit",
-  "private": false,
-  "dependencies": {},
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^3.1.0"
-  }
+  "version": "0.0.2",
+  "ignore": [
+      "node_modules",
+      "examples",
+      "test",
+      "bower_components",
+      ".tmp"
+  ]
 }
