--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "homepage": "https://neutronkit.com",
   "engines": {
-    "node": ">=4"
+    "node": ">=0.10.0"
   },
   "devDependencies": {
-    "babel-core": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.5.2",
+    "babel-core": "^5.2.17",
+    "babel-loader": "5.0.0",
+    "babel-preset-es2015-without-strict": "0.0.4",
     "browser-sync": "^2.2.1",
     "del": "^2.2.2",
     "electron-prebuilt": "^1.4.2",
@@ -35,9 +35,11 @@
     "gulp-cache": "^0.4.2",
     "gulp-cssnano": "^2.0.0",
     "gulp-eslint": "^3.0.1",
+    "gulp-files-to-json": "^0.2.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^3.0.3",
+    "gulp-inject": "^4.2.0",
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.0.1",
     "gulp-prompt": "^0.2.0",
@@ -45,9 +47,14 @@
     "gulp-scss-lint": "^0.4.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.0",
+    "gulp-svgmin": "^1.2.4",
+    "gulp-svgstore": "^6.1.0",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.0.0",
+    "gulp-util": "3.0.8",
+    "json-loader": "^0.5.4",
     "main-bower-files": "^2.5.0",
+    "webpack": "^2.6.1",
     "wiredep": "^4.0.0"
   },
   "eslintConfig": {
@@ -62,5 +69,8 @@
         "single"
       ]
     }
+  },
+  "dependencies": {
+    "jquery": "^3.2.1"
   }
 }
